--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # created by virtualenv automatically
 venv/
 .idea/
-algorithms/*/__pycache__/*
-algorithms/__pycache__/*
+dsa_algos/*/__pycache__/*
+dsa_algos/__pycache__/*
 tests/*/__pycache__/*
